crates/nash-driver/tests/snapshots/build__case_alias_outputs_and_renames_preserve_existing_artifacts-2.snap
---
source: crates/nash-driver/tests/build.rs
description: write validator artifacts named Main and MAIN
---
artifact filenames differ only by ASCII case near Main.cbor; remove old owned outputs before renaming
