crates/nash-driver/tests/snapshots/build__case_alias_outputs_and_renames_preserve_existing_artifacts.snap
---
source: crates/nash-driver/tests/build.rs
description: write validator artifacts named Main and MAIN
---
duplicate validator module name (ignoring ASCII case)
