crates/nash-driver/tests/snapshots/build__o2_validator_compiler.snap
---
source: crates/nash-driver/tests/build.rs
description: "validator module Main exposing (main)\nimport Builtin\nmain : Data -> unit\nmain _ = trace \"source\" (Builtin.trace \"builtin\" ())\n"
---
code generation failed in Main: O2 does not support compiler traces
