crates/nash-driver/tests/snapshots/build__roots_use_their_own_target_settings_and_hashes.snap
---
source: crates/nash-driver/tests/build.rs
description: "validator module First exposing (main)\nmain : 'a -> unit\nmain _ = ()\n\nvalidator module Second exposing (main)\nmain : 'a -> unit\nmain _ = ()\n"
---
First
(program 1.1.0 (lam arg_1 (con unit ())))
hash: 5224b11324c206181841f0dba49fffc3cb24ad95f9c4180dcdda89b3
Second
(program 1.1.0 (lam arg_1 (con unit ())))
hash: 186e32faa80a26810392fda6d559c7ed4721a65ce1c9d4ef3e1c87b4
