crates/nash-driver/tests/snapshots/build__source_dependency_compiles_to_roundtrippable_script.snap
---
source: crates/nash-driver/tests/build.rs
description: "module Helper exposing (identity)\nidentity x = x\n\nvalidator module Main exposing (main)\nimport Helper\nmain : Data -> unit\nmain _ = Helper.identity ()\n"
---
(program 1.1.0 (lam arg_1 (con unit ())))
