crates/nash-driver/tests/snapshots/build__unconstrained_validator_input_uses_data.snap
---
source: crates/nash-driver/tests/build.rs
description: "validator module Main exposing (main)\nmain : 'a -> unit\nmain _ = ()\n"
---
(program 1.1.0 (lam arg_1 (con unit ())))
