crates/nash-driver/tests/snapshots/build__validator_hashes_use_the_v3_language_tag.snap
---
source: crates/nash-driver/tests/build.rs
description: "validator module First exposing (main)\nmain : 'a -> unit\nmain _ = ()\n\nvalidator module Second exposing (main)\nmain : 'a -> unit\nmain _ = ()\n"
---
First
(program 1.1.0 (lam arg_1 (con unit ())))
hash: 186e32faa80a26810392fda6d559c7ed4721a65ce1c9d4ef3e1c87b4
Second
(program 1.1.0 (lam arg_1 (con unit ())))
hash: 186e32faa80a26810392fda6d559c7ed4721a65ce1c9d4ef3e1c87b4
